Cree el formulario para registrar un usuario y formule la función para obtener la informaicón

--- a/aplication/templates/index.html
+++ b/aplication/templates/index.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  
 </head>
 <body>
-    Hola hijos de puta
+    
+<section class="m-3">
+    <h3 class="m-b-2">Registro usuario</h3>
+    <form action="{{url_for('index')}}" method="post">
+        <div class="mb-3">
+            <label for="nombre" class="form-label">Nombre</label>
+            <input autofocus required type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre">
+        </div>
+        <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input required type="email" class="form-control" id="email" name="email" placeholder="username@correo.com">
+        </div>
+        <div class="mb-3">
+            <label for="ciudad" class="form-label">Ciudad</label>
+            <input required type="text" class="form-control" id="ciudad" name="ciudad" placeholder="ciudad">
+        </div>
+        <div class="mb-3">
+            <button type="submit" class="btn btn-outline-primary">Registrar</button>
+        </div>
+    </form>
+
+</section>
 </body>
 </html>
