Se creo la función para agregar usuarios

--- a/aplication/templates/index.html
+++ b/aplication/templates/index.html
@@ -12,7 +12,7 @@
     
 <section class="m-3">
     <h3 class="m-b-2">Registro usuario</h3>
-    <form action="{{url_for('index')}}" method="post">
+    <form action="{{url_for('registrar')}}" method="post">
         <div class="mb-3">
             <label for="nombre" class="form-label">Nombre</label>
             <input autofocus required type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre">
