--- a/aplication/templates/index.html
+++ b/aplication/templates/index.html
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  
-</head>
-<body>
-    
+{% extends './base.html' %}
+{% block contenido  %}
 <section class="m-3">
     <h3 class="m-b-2">Registro usuario</h3>
     <form action="{{url_for('registrar')}}" method="post">
@@ -27,9 +17,13 @@
         </div>
         <div class="mb-3">
             <button type="submit" class="btn btn-outline-primary">Registrar</button>
+           
+   
+           
+            <a href="{{url_for("all")}}"><button type="button" class="btn btn-outline-primary">mostrar</button></a>
         </div>
     </form>
 
 </section>
-</body>
-</html>
+
+{% endblock %}
